- fixed alignment of icons without caption  - IE7 compatibility fixes

--- a/quix/themes/default/theme.css
+++ b/quix/themes/default/theme.css
@@ -519,6 +519,7 @@ BODY {
 .combodropdown {
     border-style: solid;
     border-color: gray;
+    background: white;
 }
 
 .combodropdown .option {
